tests/pass/02_multiple_prints.zn
foreign u0 printf(*char)

u32 main() {
    printf("line1\n")
    printf("line2\n")
    printf("line3\n")
    return 0
}
