tests/fail/01_undeclared_names.zn
foreign u0 printf(*char)

u32 main() {
    printf(undeclared)
    unknownFunc()
    return 0
}
